# salad

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  salad.c
examples/: CMakeLists.txt  mains.c  sine.c
include/AL/: al.h  alc.h  efx.h  salad.h
src/: salad.c
